Visibility (z-index) fixes.

--- a/src/theme/dvk.css
+++ b/src/theme/dvk.css
@@ -159,7 +159,7 @@ ion-icon.medium {
   position: absolute;
   left: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 99999;
   background-color: var(--ion-color-primary);
   height: 24px;
   display: flex;
@@ -175,7 +175,7 @@ ion-text.offlineStatus > * {
 
 ion-progress-bar {
   position: fixed;
-  z-index: 9999;
+  z-index: 99999;
 }
 ion-progress-bar.danger {
   --background: rgba(var(--ion-color-danger-rgb), 0.3);
